        added support for SMC TigerStack 6224M
          (thanks to Chinasee B. <chinasee.b@psu.ac.th>)
        show switches section in web admin GUI only in VLAN 
          isolation mode
          (http://www.packetfence.org/mantis/view.php?id=571)
        moved interface configuration into separate HTML page
          (http://www.packetfence.org/mantis/view.php?id=573)
        switchconfig get all is no nicely sorted

1.8.0
        unify log management
          (http://www.packetfence.org/mantis/view.php?id=356)
        unify vlan_determine_for_node and node_determine_VLAN
          (http://www.packetfence.org/mantis/view.php?id=357)
        not all log statements contain thread and proc ID
          (http://www.packetfence.org/mantis/view.php?id=384)
        service packetfence status works only if mysql is running
          (http://www.packetfence.org/mantis/view.php?id=142)
        support MAC addresses in several different formats
          (http://www.packetfence.org/mantis/view.php?id=385)
        arp.listendevice is not documented
          (http://www.packetfence.org/mantis/view.php?id=387)
        arp.listendevice is not defined in pf.conf!
          (http://www.packetfence.org/mantis/view.php?id=405)
        replace Net::Telnet::Cisco by Net::Appliance::Session
          (http://www.packetfence.org/mantis/view.php?id=379)
        support for SSH CLI Session on Cisco switchess
          (http://www.packetfence.org/mantis/view.php?id=388)
        use log subcategories in pfsetvlan
          (http://www.packetfence.org/mantis/view.php?id=340)
        use logdie instead of die
          (http://www.packetfence.org/mantis/view.php?id=136)
        Removed db connection parameters from switches.conf
          (http://www.packetfence.org/mantis/view.php?id=391)
        Removed DBI connect in pfsetvlan
          (http://www.packetfence.org/mantis/view.php?id=393)
        Isolation of unregistered computers