@@ -33,12 +33,13 @@ view=View
 add=Add
 
 [ui.configuration]
-display=main,interfaces,switches,violation,instructions,fingerprint
+display=main,interfaces,networks,switches,violation,instructions,fingerprint
 violation=Violation
 switches=Switches
 fingerprint=Fingerprint
 main=Main
 interfaces=Interfaces
+networks=Networks
 instructions=Instructions
 
 [ui.status.reports]
@@ -277,6 +278,19 @@ mask=Netmask
 type=Type
 gateway=Gateway
 command=interfaceconfig get
+
+[ui.configuration.networks]
+display=network,netmask,gateway,domain-name,dns,dhcp_start,dhcp_end,dhcp_default_lease_time,dhcp_max_lease_time
+network=Network
+netmask=Netmask
+gateway=Gateway
+domain-name=DomainName
+dns=DNS
+dhcp_start=DHCP start
+dhcp_end=DHCP end
+dhcp_default_lease_time=Def Lease
+dhcp_max_lease_time=Max Lease
+command=networkconfig get
 
 [ui.configuration.switches]
 display=ip,type,mode,uplink,SNMPVersion,SNMPCommunityRead,SNMPCommunityWrite,SNMPVersionTrap,SNMPCommunityTrap,cliTransport,cliUser,cliPwd,cliEnablePwd
