@@ -33,6 +33,8 @@
         $cmd = "schedule $_POST[action] $new_array[0]";
       } else if (($current_top == 'configuration') && ($current_sub=='interfaces')) {
         $cmd = "interfaceconfig delete $new_array[0]";
+      } else if (($current_top == 'configuration') && ($current_sub=='networks')) {
+        $cmd = "networkconfig delete $new_array[0]";
       } else if (($current_top == 'configuration') && ($current_sub=='switches')) {
         $cmd = "switchconfig delete $new_array[0]";
       } else if (($current_top == 'configuration') && ($current_sub=='violation')) {
